--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>实时显示系统时间C</title>
+    <title></title>
 <script>
     var i=0;
     function myDate(){
